--- a/.github/workflows/update_configs.yml
+++ b/.github/workflows/update_configs.yml
@@ -2,7 +2,7 @@ name: Update Clash Configs
 
 on:
   schedule:
-    - cron: '* */6 * * *'
+    - cron: '0 16,22 * * *'
   workflow_dispatch:
 
 jobs:
