--- a/.github/workflows/update_configs.yml
+++ b/.github/workflows/update_configs.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     permissions:
       contents: write 
@@ -16,11 +16,6 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 1
-        
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
         
     - name: Install dependencies
       run: |
